--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -4,26 +4,45 @@
   padding 5px
   overflow hidden
 
+
   .polaroid
+    position relative
+    overflow hidden
+    background-color #fff
     margin 0
-    margin-bottom 5px
-    padding 5%
+    padding 0
     border-radius 3px
-    border 1px solid #BDC2CC
+    box-shadow 0px 1px 2px 0px rgba(0,0,0,0.1)
 
   .polaroid-photo
     width 100%
-    margin-bottom 5px
 
   .photo-user
-    font-size 0.85em
+    .media
+      margin-top 1px
+    padding 10px 10px
     white-space nowrap
-
     a
       color  #555555
     small
       color  #888888
-  
-  .photo-status
-    margin 0.4em 0
+
+  // .photo-info
+  //   opacity 1.0
+  //   position absolute
+  //   height 35px
+  //   line-height 35px
+  //   vertical-align middle
+  //   background-color rgba(0,0,0,0.6)
+  //   top 0
+  //   opacity 0
+  //   transition opacity 0.4s ease
+  //   width 100%
+
+  // .photo-status
+  //   margin 0.4em 0
+
+  // .polaroid:hover
+  //   .photo-info
+  //     opacity 1.0
 
