--- a/app/views/site/header/headerView_.jade
+++ b/app/views/site/header/headerView_.jade
@@ -3,13 +3,13 @@ nav.site-navigation.navbar.navbar-static-top
     ul.nav.navbar-nav.navbar-left
       li.nav-static
         a(href=jade.url("static#about"))
-          |  о проекте
+          |  О проекте
       li.nav-stations
         a(href="#{jade.url('stations#index')}")
-          |  печатные станции
+          |  Печатные станции
       li.nav-shots
         a(href="#{jade.url('shots#index')}")
-          |  фотографии
+          |  Фотографии
 
     ul.nav.navbar-nav.navbar-right
       if !jade.auth()
