--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -2,31 +2,36 @@
   a(href=jade.url('shots#show', {id : shot._id}))
     img.polaroid-photo.img-responsive(src="#{shot.thumbnail}")
 
-  .photo-user
-    b
-      a(href="http://instagram.com/"+shot.instagram.user.username target="_blank")
-        |@
-        = shot.instagram.user.username
-        | 
-        br
-        small
-          | (
-          = shot.instagram.user.full_name
-          | )
-  .photo-status      
-    case shot.status
-      when "failed"
-        span.label.label-danger Не напечатана
-      when "printed"
-        a(href=jade.url('stations#show', { name : shot.printedOn.name }))
-          span.label.label-success= shot.printedOn.title
-      when "queued"
-        span.label.label-info В очереди
-      default 
-        span.label.label-default Необработана
-  .photo-control
-    if jade.auth()
-      .btn-group.btn-group-sm
-        a.print-button.btn.btn-default: i.fa.fa-print
-        a.delete-confirm.btn.btn-default: i.fa.fa-trash-o
-          
+    .photo-user
+      .media
+        a.pull-left(href="http://instagram.com/" + shot.instagram.user.username target="_blank")
+          img.img-circle.media-object(src=shot.instagram.user.profile_picture width=48 height=48)
+
+        .media-body
+          a(href="http://instagram.com/" + shot.instagram.user.username target="_blank")
+            h4.media-heading
+              | @
+              = shot.instagram.user.username
+              small
+                |  (
+                = shot.instagram.user.full_name
+                | )
+          = shot.instagram.caption.text
+
+    //- .photo-info
+    //-   case shot.status
+    //-     when "failed"
+    //-       span.label.label-danger Не напечатана
+    //-     when "printed"
+    //-       a(href=jade.url('stations#show', { name : shot.printedOn.name }))
+    //-         span.label.label-success= shot.printedOn.title
+    //-     when "queued"
+    //-       span.label.label-info В очереди
+    //-     default
+    //-       span.label.label-default Необработана
+
+    //- if jade.auth()
+    //-   .btn-group.btn-group-sm
+    //-     a.print-button.btn.btn-default: i.fa.fa-print
+    //-     a.delete-confirm.btn.btn-default: i.fa.fa-trash-o
+
