--- a/app/views/site/siteView.styl
+++ b/app/views/site/siteView.styl
@@ -7,6 +7,7 @@ body, input, textarea, button
 body
   font-family: 'PT Sans'
   font-weight: 200
+  background-color #f3f3f3
 
 h1, h2, h3, h4, h5, h6
   font-family 'PT Sans Narrow'
