Collapsing mobile-friendly navbar

--- a/app/views/about/aboutView.styl
+++ b/app/views/about/aboutView.styl
@@ -52,6 +52,10 @@
 
   .big-header
     font-family "PT Sans Narrow"
+    
+    transition font-size 0.3s ease
+    @media (max-width: 768px)
+      font-size 44px
     font-size 64px
     font-weight bold
 
@@ -59,8 +63,8 @@
     font-size 20px
     font-weight 100
     font-family 'PT Sans'
-    margin-top 50px
-    margin-bottom 50px
+    margin-top 30px
+    margin-bottom 30px
 
   .wow-button
     border 1px solid white
