Added action buttons in shot grid view

--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -27,22 +27,36 @@
     small
       color  #888888
 
-  // .photo-info
-  //   opacity 1.0
-  //   position absolute
-  //   height 35px
-  //   line-height 35px
-  //   vertical-align middle
-  //   background-color rgba(0,0,0,0.6)
-  //   top 0
-  //   opacity 0
-  //   transition opacity 0.4s ease
-  //   width 100%
+  .photo-info
+    span.label
+      font-size 13px
+    padding-left: 5px
+    .action-button
+      display:inline-block
+      width: 26px
+      height: 26px
+      font-size: 24px
+      line-height: 26px
+      text-align: center
+      color: white
+      vertical-align: middle
+      cursor: pointer
 
-  // .photo-status
-  //   margin 0.4em 0
+    opacity 1.0
+    position absolute
+    height 40px
+    line-height 40px
+    vertical-align middle
+    background-color rgba(0,0,0,0.6)
+    top 0
+    opacity 0
+    transition opacity 0.4s ease
+    width 100%
 
-  // .polaroid:hover
-  //   .photo-info
-  //     opacity 1.0
+  .photo-status
+    margin 0.4em 0
+
+  .polaroid:hover
+    .photo-info
+      opacity 1.0
 
