--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -2931,6 +2931,49 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 .shot-grid-item .photo-user small {
   color: #888;
 }
+.shot-grid-item .photo-info {
+  padding-left: 5px;
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+  position: absolute;
+  height: 40px;
+  line-height: 40px;
+  vertical-align: middle;
+  background-color: rgba(0,0,0,0.6);
+  top: 0;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.4s ease;
+  -moz-transition: opacity 0.4s ease;
+  -o-transition: opacity 0.4s ease;
+  -ms-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+  width: 100%;
+}
+.shot-grid-item .photo-info span.label {
+  font-size: 13px;
+}
+.shot-grid-item .photo-info .action-button {
+  display: inline-block;
+  width: 26px;
+  height: 26px;
+  font-size: 24px;
+  line-height: 26px;
+  text-align: center;
+  color: #fff;
+  vertical-align: middle;
+  cursor: pointer;
+}
+.shot-grid-item .photo-status {
+  margin: 0.4em 0;
+}
+.shot-grid-item .polaroid:hover .photo-info {
+  opacity: 1;
+  -ms-filter: none;
+  filter: none;
+}
 
 .shot-grid-view {
   padding-top: 10px;
