Fix shot caption in templates

--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -16,7 +16,8 @@
                 |  (
                 = shot.instagram.user.full_name
                 | )
-          = shot.instagram.caption.text
+          if shot.instagram.caption
+            = shot.instagram.caption.text
 
     .photo-info
       if jade.auth()
