--- a/app/views/site/header/headerView.styl
+++ b/app/views/site/header/headerView.styl
@@ -23,7 +23,7 @@ $color-light = #fff
   // Navigation bar
   .site-navigation
     *
-      background none 
+      background none
     border none
     padding 0
     margin 0
@@ -40,7 +40,7 @@ $color-light = #fff
             font-size 24px
 
       .navbar-collapse
-        transition: height 0.0s
+        transition: height 0.0s !important
     ul li
       a
         background none
