--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -1,6 +1,6 @@
 .polaroid
   a(href=jade.url('shots#show', {id : shot._id}))
-    img.polaroid-photo.img-responsive(src="#{shot.thumbnail}")
+    img.polaroid-photo.img-responsive(src="#{shot.image }")
 
     .photo-user
       .media
@@ -24,15 +24,15 @@
         span.action-button.print-button.ion-ios7-printer-outline
         span.action-button.delete-button.ion-ios7-trash-outline
 
-      case shot.status
-        when "failed"
-          span.label.label-danger Не напечатана
-        when "printed"
-          a(href=jade.url('stations#show', { name : shot.printedOn.name }))
-            span.label.label-success= shot.printedOn.title
-        when "queued"
-          span.label.label-info В очереди
-        default
-          span.label.label-default Необработана
+      //- case shot.status
+      //-   when "failed"
+      //-     span.label.label-danger Не напечатана
+      //-   when "printed"
+      //-     //- a(href=jade.url('stations#show', { name : shot.printedOn.name }))
+      //-     //-   span.label.label-success= shot.printedOn.title
+      //-   when "queued"
+      //-     span.label.label-info В очереди
+      //-   default
+      //-     span.label.label-default Необработана
 
 
