--- a/app/views/shot/grid/shotGridView_.jade
+++ b/app/views/shot/grid/shotGridView_.jade
@@ -1,6 +1,8 @@
 .shot-grid-view
   .container
     .shot-grid
+
     .text-center
-      a.super-button Загрузить еще
+      .load-spinner
+        i.icon.ion-loading-c
 
