--- a/app/views/shot/grid/shotGridView.styl
+++ b/app/views/shot/grid/shotGridView.styl
@@ -1,3 +1,11 @@
+@import 'nib'
+
 .shot-grid-view
   padding-top 10px
   height 100%
+
+
+.load-spinner
+  .icon.ion-loading-c
+    font-size 42px
+    animation-duration 0.4s
