--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -17,7 +17,7 @@
   @media (max-width: 1200px) and (min-width: 960px)
     width 33%
   @media (min-width: 1200px)
-    width : 25%
+    width 25%
 
   padding: 0px 4px 0px 4px
   margin-bottom 8px
