--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3019,8 +3019,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   padding-top: 10px;
   height: 100%;
 }
-.load-spinner .icon.ion-loading-c {
-  font-size: 42px;
+.load-spinner .icon {
+  font-size: 38px;
   -webkit-animation-duration: 0.4s;
   -moz-animation-duration: 0.4s;
   -o-animation-duration: 0.4s;
