Little style fixes

--- a/app/views/about/aboutView_.jade
+++ b/app/views/about/aboutView_.jade
@@ -19,7 +19,7 @@
             .big-header-subtitle
               | Представляем независимый проект по печати фотографий из Instagram
               | &mdash; <b>StevieWhale</b>
-             a.wow-button.btn.btn-lg(href="#{jade.url('shots#index')}") Ух ты, как интересно!
+             a.wow-button.btn.btn-lg(href="#{jade.url('shots#index')}") Ух ты, интересно!
           .col-md-1
 
     //- .container
