--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -37,6 +37,9 @@
   .photo-user
     .media
       margin-top 1px
+
+      .media-heading
+        font-family 'PT Sans Narrow'
     padding 10px 10px
     a
       color  #555555
