--- a/app/views/shot/show/shotView.styl
+++ b/app/views/shot/show/shotView.styl
@@ -1,3 +1,32 @@
-.shot-single-view
-  margin-top 1em
-  
+@import 'nib'
+
+.shot-view
+  padding-top 10px
+  .polaroid
+    position relative
+    overflow hidden
+    background-color #fff
+    margin 0
+    padding 0
+    border-radius 3px
+    box-shadow 0px 1px 2px 0px rgba(0,0,0,0.1)
+
+  .polaroid-photo
+    width 100%
+
+  .photo-user
+    .media
+      margin-top 1px
+    padding 10px 10px
+    a
+      color  #555555
+    small
+      color  #888888
+
+  .photo-area
+    position relative
+
+
+
+
+
