--- a/app/views/site/siteView.styl
+++ b/app/views/site/siteView.styl
@@ -10,7 +10,7 @@ body
   background-color #f3f3f3
 
 h1, h2, h3, h4, h5, h6
-  font-family 'PT Sans Narrow'
+  font-family 'PT Sans'
 
 .site-container
   padding 0
