Fixed shot views

--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -1,7 +1,7 @@
 .polaroid
   .photo-area
     a(href=jade.url('shots#show', {id : shot._id}))
-      img.polaroid-photo.img-responsive(src="#{ shot.image }")
+      img.polaroid-photo.img-responsive(src="#{ shot.image_low }")
 
     .photo-info
       if jade.auth()
@@ -23,20 +23,19 @@
 
   .photo-user
     .media
-      a.pull-left(href="http://instagram.com/" + shot.instagram.user.username target="_blank")
-        img.img-circle.media-object(src=shot.instagram.user.profile_picture width=48 height=48)
+      a.pull-left(href="http://instagram.com/" + shot.user.name target="_blank")
+        img.img-circle.media-object(src=shot.user.avatar width=48 height=48)
 
       .media-body
-        a(href="http://instagram.com/" + shot.instagram.user.username target="_blank")
+        a(href=shot.link target="_blank")
           h4.media-heading
             | @
-            = shot.instagram.user.username
+            = shot.user.name
             small
               |  (
-              = shot.instagram.user.full_name
+              = shot.user.fullname
               | )
-        if shot.instagram.caption
-          = shot.instagram.caption.text
+        = shot.caption
 
 
 
