Fixed action buttons

--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -34,6 +34,17 @@
   .polaroid-photo
     width 100%
 
+  .action-button
+    // display:inline-block
+    width: 22px
+    height: 22px
+    font-size: 22px
+    line-height: 22px
+    text-align: center
+    // color: white
+    vertical-align: middle
+    cursor: pointer
+
   .photo-user
     .media
       margin-top 1px
@@ -56,16 +67,6 @@
     .photo-info
       display:none
       padding: 10px
-      .action-button
-        display:inline-block
-        width: 28px
-        height: 28px
-        font-size: 26px
-        line-height: 28px
-        text-align: center
-        color: white
-        vertical-align: middle
-        cursor: pointer
 
       position absolute
       left: 0
