--- a/app/views/shot/grid/item/shotGridItemView_.jade
+++ b/app/views/shot/grid/item/shotGridItemView_.jade
@@ -26,6 +26,13 @@
       a.pull-left(href="http://instagram.com/" + shot.user.name target="_blank")
         img.img-circle.media-object(src=shot.user.avatar width=48 height=48)
 
+      if jade.auth()
+        .pull-right
+          .action-button.delete-button
+            .ion-ios7-trash-outline
+          .action-button.print-button
+            .ion-ios7-printer-outline
+
       .media-body
         a(href=shot.link target="_blank")
           h4.media-heading
