--- a/app/views/shot/grid/shotGridView.styl
+++ b/app/views/shot/grid/shotGridView.styl
@@ -4,8 +4,10 @@
   padding-top 10px
   height 100%
 
-
-.load-spinner
-  .icon
-    font-size 38px
-    animation-duration 0.4s
+  .loading-container
+    margin-top 30px
+    margin-bottom 50px
+    .load-spinner
+      .icon
+        font-size 32px
+        animation-duration 0.3s
