--- a/app/views/shot/grid/shotGridView_.jade
+++ b/app/views/shot/grid/shotGridView_.jade
@@ -2,7 +2,7 @@
   .container
     .shot-grid
 
-    .text-center
+    .loading-container.text-center
       .load-spinner
-        i.icon.ion-ios7-reloading
+        i.icon.ion-loading-c
 
