--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -46,12 +46,14 @@
     cursor: pointer
 
   .photo-user
+
     .media
       margin-top 1px
 
       .media-heading
         font-family 'PT Sans Narrow'
     padding 10px 10px
+    padding-bottom 15px
     a
       color  #555555
     small
