Fixed queued status style

--- a/app/views/shot/grid/item/shotGridItemView.styl
+++ b/app/views/shot/grid/item/shotGridItemView.styl
@@ -55,7 +55,7 @@
       &.failed
         background-color #E01E73
       &.queued
-        background-color #E4EDA6
+        background-color #E5F533
 
       margin 5px auto
       width 8px
